--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "mocha",
     "test-coverage": "npm test && istanbul cover node_modules/mocha/bin/_mocha -- -R spec",
     "install-local": "npm install -g mocha & npm install -g node-inspector & npm install",
-    "start": "node server.js 1 prod 127.0.0.1 3000 9000",
-    "debug": "node-debug server.js 0 dev 127.0.0.1 3000 9000"
+    "start": "node server.js",
+    "debug": "node-debug server.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,24 @@
   "devDependencies": {
   },
   "dependencies": {
+    "express":"~4.13.3",
+    "mongoose":"~3.8.8",
+    "lodash":"~3.10.1",
+    "cookie-parser":"~1.4.0",
+    "glob":"~6.0.1",
+    "path":"~0.12.7",
+    "connect-mongo":"~0.4.1",
+    "express-session":"~1.12.1",
+    "passport":"~0.3.2",
+    "passport-local": "~1.0.0",
+    "passport-facebook": "~1.0.2",
+    "passport-twitter": "~1.0.2",
+    "passport-linkedin": "~0.1.3",
+    "passport-google-oauth": "~0.1.5",
+    "passport-github": "~0.1.5",
+    "async":"1.5.0",
+    "body-parser":"1.14.1",
+    "nodemailer":"1.10.0",
+    "chalk":"~1.1.1"
   }
 }
