--- a/app/config/routes/ride.route.config.json
+++ b/app/config/routes/ride.route.config.json
@@ -1,5 +1,28 @@
 {
   "routes":[
-
+    {
+      "post_setup":"true",
+      "action":"loadApp",
+      "controller": "../controllers/v1/ride/ride.server.controller.js"
+    },
+    {
+      "post_setup":"true",
+      "action":"coreSockets",
+      "controller": "../controllers/v1/ride/ride.server.controller.js"
+    },
+    {
+      "route":"/v1/ride/newRide",
+      "method":"POST",
+      "action":"newRide",
+      "auth":"true",
+      "controller": "../controllers/v1/ride/ride.server.controller.js"
+    },
+    {
+      "route":"/v1/ride/checkFriend",
+      "method":"POST",
+      "action":"checkFriend",
+      "auth":"true",
+      "controller": "../controllers/v1/ride/ride.server.controller.js"
+    }
   ]
 }
