--- a/package.json
+++ b/package.json
@@ -19,27 +19,30 @@
   ],
   "author": "UberCUTeam",
   "license": "",
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "dependencies": {
-    "express":"~4.13.3",
-    "mongoose":"~3.8.8",
-    "lodash":"~3.10.1",
-    "cookie-parser":"~1.4.0",
-    "glob":"~6.0.1",
-    "path":"~0.12.7",
-    "connect-mongo":"~0.4.1",
-    "express-session":"~1.12.1",
-    "passport":"~0.3.2",
-    "passport-local": "~1.0.0",
+    "async": "1.5.0",
+    "body-parser": "1.14.1",
+    "chalk": "~1.1.1",
+    "connect-mongo": "~0.4.1",
+    "cookie-parser": "~1.4.0",
+    "express": "~4.13.3",
+    "express-session": "~1.12.1",
+    "glob": "~6.0.1",
+    "googlemaps": "1.2.0",
+    "lodash": "~4.3.0",
+    "mongoose": "~3.8.8",
+    "node-uber": "0.0.7",
+    "nodemailer": "1.10.0",
+    "passport": "~0.3.2",
     "passport-facebook": "~1.0.2",
-    "passport-twitter": "~1.0.2",
-    "passport-linkedin": "~0.1.3",
-    "passport-google-oauth": "~0.1.5",
     "passport-github": "~0.1.5",
-    "async":"1.5.0",
-    "body-parser":"1.14.1",
-    "nodemailer":"1.10.0",
-    "chalk":"~1.1.1"
+    "passport-google-oauth": "~0.1.5",
+    "passport-linkedin": "~0.1.3",
+    "passport-local": "~1.0.0",
+    "passport-twitter": "~1.0.2",
+    "path": "~0.12.7",
+    "q": "^1.4.1",
+    "socket.io": "1.4.5"
   }
 }
