--- a/app/config/routes/ride.route.config.json
+++ b/app/config/routes/ride.route.config.json
@@ -44,6 +44,20 @@
             "action": "getEstimatedPrice",
             "auth": "true",
             "controller": "../controllers/v1/ride/ride.server.controller.js"
+        },
+        {
+            "route": "/v1/ride/requestUberRide",
+            "method": "POST",
+            "action": "requestRide",
+            "auth": "true",
+            "controller": "../controllers/v1/ride/ride.server.controller.js"
+        },
+        {
+            "route": "/v1/ride/getUberRequestedRide",
+            "method": "POST",
+            "action": "getRequestedRide",
+            "auth": "true",
+            "controller": "../controllers/v1/ride/ride.server.controller.js"
         }
     ]
 }
