--- a/app/config/routes/ride.route.config.json
+++ b/app/config/routes/ride.route.config.json
@@ -11,9 +11,9 @@
       "controller": "../controllers/v1/ride/ride.server.controller.js"
     },
     {
-      "route":"/v1/ride/newRide",
+      "route":"/v1/ride/init",
       "method":"POST",
-      "action":"newRide",
+      "action":"initRide",
       "auth":"true",
       "controller": "../controllers/v1/ride/ride.server.controller.js"
     },
