Added patch and delete functionalities for a requested ride

--- a/app/config/routes/ride.route.config.json
+++ b/app/config/routes/ride.route.config.json
@@ -58,6 +58,20 @@
             "action": "getRequestedRide",
             "auth": "true",
             "controller": "../controllers/v1/ride/ride.server.controller.js"
+        },
+        {
+            "route": "/v1/ride/patchUberRequestedRide",
+            "method": "POST",
+            "action": "patchRequestedRide",
+            "auth": "true",
+            "controller": "../controllers/v1/ride/ride.server.controller.js"
+        },
+        {
+            "route": "/v1/ride/deleteUberRequestedRide",
+            "method": "POST",
+            "action": "deleteRequestedRide",
+            "auth": "true",
+            "controller": "../controllers/v1/ride/ride.server.controller.js"
         }
     ]
 }
