--- a/app/config/routes/ride.route.config.json
+++ b/app/config/routes/ride.route.config.json
@@ -11,7 +11,7 @@
             "controller": "../controllers/v1/ride/ride.server.controller.js"
         },
         {
-            "route": "/v1/ride/init",
+            "route": "/v1/ride/initRide",
             "method": "POST",
             "action": "initRide",
             "auth": "true",
