Added the logic for requesting a ride and changing the final destination

--- a/app/config/routes/ride.route.config.json
+++ b/app/config/routes/ride.route.config.json
@@ -79,6 +79,20 @@
             "action": "deleteRequestedRide",
             "auth": "true",
             "controller": "../controllers/v1/ride/ride.server.controller.js"
+        },
+        {
+            "route": "/v1/ride/startRide",
+            "method": "POST",
+            "action": "startRide",
+            "auth": "true",
+            "controller": "../controllers/v1/ride/ride.server.controller.js"
+        },
+        {
+            "route": "/v1/ride/updateUberDestination",
+            "method": "POST",
+            "action": "updateUberDestination",
+            "auth": "true",
+            "controller": "../controllers/v1/ride/ride.server.controller.js"
         }
     ]
 }
